# expense-tracker

./: .gitignore  Procfile  README.md  demo_data.csv  main.py  pyproject.toml  railway.toml  requirements.txt
.github/: copilot-instructions.md
expense_tracker/expense_tracker/: settings.py  urls.py
expense_tracker/expenses/: admin.py  allocations.py  apps.py  charts.py  default_categories.py  forms.py  helpers.py  importers.py  models.py  signals.py  test_migrations.py  tests.py  urls.py  views.py
expense_tracker/expenses/migrations/: 0001_initial.py  0002_expense_receiver.py  0003_expense_user_share_category_expense_category_obj_and_more.py  0004_populate_categories_and_shares.py  0005_link_categories_to_users.py  0006_category_keywords.py  0007_update_category_keywords.py  0008_category_category_type.py  0009_category_parent.py  0010_category_income_type.py  0011_user_owned_default_categories.py  0012_expensepart.py  0013_convert_parts_remove_expensepart.py  0014_add_spiir_default_categories.py
expense_tracker/expenses/static/expenses/: style.css
expense_tracker/expenses/templates/: base.html  login.html  signup.html
expense_tracker/expenses/templates/expenses/: category_confirm_delete.html  category_form.html  category_list.html  expense_confirm_delete.html  expense_confirm_delete_all.html  expense_form.html  expense_list.html  expenses_per_month.html  import_summary.html  sync_summary.html  upload_csv.html
expense_tracker/expenses/templates/expenses/partials/: nav_links.html  user_meta.html
